# Spectre

./: .CMakeLists.txt.swp  CMakeLists.txt  start.md
spectre/: .log.cc.swp  .log.h.swp  log.cc  log.h  singleton.h  util.cc  util.h
tests/: .test.cc.swp  test.cc
